# derpkit

./: .gitignore  Makefile  Makefile.am  README.md  configure.ac  libderpkit.pc.in  main.cpp  shaderdefs.cpp.in  shaderdefs.hpp.in
css/: css.cpp  css.hpp  cssproperty.cpp  cssproperty.hpp  cssrule.cpp  cssrule.hpp  cssselector.cpp  cssselector.hpp
css/parser/: css3.g  css3.h
data/inspector/: InspectorBackendCommands.js  README.md  SupportedCSSProperties.js  audits_module.js  console_module.js  devtools.css  devtools.html  devtools.html~  devtools.js  devtools_extension_api.js  elements_module.js  heap_snapshot_worker_module.js  index.html  inspector.css  inspector.html  inspector.js  layers_module.js  network_module.js  profiler_module.js  promises_module.js  resources_module.js  script_formatter_worker_module.js  settings_module.js  source_frame_module.js  sources_module.js  timeline_module.js  toolbox.css  toolbox.js
data/shaders/: main.frag  main.vert  shaders.conf  text.frag  texture.frag
include/derpkit/: derpkit.hpp  export.hpp  forward.hpp  version.hpp
include/derpkit/css/: css.hpp  datatype.hpp  expression.hpp  function_args.hpp  property.hpp  rule.hpp  selector.hpp  state.hpp
include/derpkit/dom/: document.hpp  inspector.hpp  node.hpp
include/derpkit/render/: draw.hpp  math.hpp  rendertarget.hpp  shader.hpp  shaderresource.hpp  texture.hpp  utils.hpp
include/derpkit/utils/: base64.hpp  file.hpp  logging.hpp  string.hpp  string_utils.hpp  utils.hpp
include/derpkit/utils/network/: socket.hpp  websocket.hpp
scripts/: shaderpack.py
src/: derpkit.cpp  ffs_compat.cpp  ffs_compat.hpp  main.cpp  platform.hpp  version.cpp
src/css/: apply.cpp  apply.hpp  colors.cpp  colors.hpp  css.cpp  css.hpp  cssproperty.hpp  cssrule.cpp  cssrule.hpp  cssselector.cpp  cssselector.hpp  datatype.cpp  expression.cpp  parsers.cpp  parsers.hpp  property.cpp  property.hpp  rule.cpp  rule.hpp  selector.cpp  selector.hpp  specificity.cpp  specificity.hpp
src/css/datatype/: position.cpp
src/css/parser/: css3.g  css3.h  css3.tokens  css3Lexer.h  css3Parser.c  css3Parser.h
src/dom/: document.cpp  document.hpp  inspector.cpp  node.cpp  node.hpp  state.cpp  state.hpp  test.cpp
src/render/: draw.cpp  font.cpp  font.hpp  impl.hpp  math.cpp  rendertarget.cpp  shader.cpp  text.cpp  text.hpp  texture.cpp  utils.cpp
src/render/freetype/: font.cpp  freetype.hpp  text.cpp
src/render/gl/: fbo.cpp  fbo.hpp  gl.hpp  impl.cpp  shader.cpp  texture.cpp  types.hpp
src/test/: main.cpp  window.cpp  window.hpp
src/utils/: base64.cpp  file.cpp  logging.cpp  string.cpp  string_utils.cpp  utils.cpp  utils.hpp
src/utils/network/: socket.cpp  websocket.cpp
test/: dom.cpp
test/css/: bootstrap.css  mini.css  simple.css  test.css
